projet seeting + controller

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/Maps/MainMap.MainMap
+EditorStartupMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode="/Script/PathFinding.PathFindingGameMode"
+TransitionMap=/Game/Maps/MainMap.MainMap
+ServerDefaultMap=/Game/Maps/MainMap.MainMap
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
